{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 247,
  "lineage": "21434ea0-d3fb-9cff-3394-d3ecbbe7c36a",
  "resources": [
    {
      "module": "module.emr",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815254799362:vpc/vpc-009f79b9a7fa135ec",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-091d36db0c749a1af",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-03667d5b09123d285",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-009f79b9a7fa135ec",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fd7e2d3a3017bcbf",
            "owner_id": "815254799362"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.emr",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_emr_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815254799362:security-group/sg-09f686f7afb89c749",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-09f686f7afb89c749",
            "ingress": [],
            "name": "allow_tls_sg_emr_cluster",
            "name_prefix": "",
            "owner_id": "815254799362",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Owner": "gajeto",
              "Topic": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-009f79b9a7fa135ec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.emr.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.emr",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg_emr_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815254799362:security-group-rule/sgr-07aa9da75d9fd0b75",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-07aa9da75d9fd0b75",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09f686f7afb89c749",
            "security_group_rule_id": "sgr-07aa9da75d9fd0b75",
            "tags": null,
            "tags_all": {
              "Owner": "gajeto",
              "Topic": "terraform"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.emr.aws_security_group.sg_emr_cluster",
            "module.emr.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.emr.module.cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815254799362:security-group/sg-07b981b8d8d330587",
            "description": "Managed master security group",
            "egress": [],
            "id": "sg-07b981b8d8d330587",
            "ingress": [],
            "name": "emr-cluster-ssm-master-20251026155127642600000001",
            "name_prefix": "emr-cluster-ssm-master-",
            "owner_id": "815254799362",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "emr-cluster-ssm-master",
              "for-use-with-amazon-emr-managed-policies": "true",
              "terraform-aws-modules": "emr"
            },
            "tags_all": {
              "Name": "emr-cluster-ssm-master",
              "Owner": "gajeto",
              "Topic": "terraform",
              "for-use-with-amazon-emr-managed-policies": "true",
              "terraform-aws-modules": "emr"
            },
            "timeouts": null,
            "vpc_id": "vpc-009f79b9a7fa135ec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.emr.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.emr.module.cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:815254799362:security-group/sg-02f6d8c30b3bbe282",
            "description": "Managed slave security group",
            "egress": [],
            "id": "sg-02f6d8c30b3bbe282",
            "ingress": [],
            "name": "emr-cluster-ssm-slave-20251026155127642700000002",
            "name_prefix": "emr-cluster-ssm-slave-",
            "owner_id": "815254799362",
            "revoke_rules_on_delete": true,
            "tags": {
              "Name": "emr-cluster-ssm-slave",
              "for-use-with-amazon-emr-managed-policies": "true",
              "terraform-aws-modules": "emr"
            },
            "tags_all": {
              "Name": "emr-cluster-ssm-slave",
              "Owner": "gajeto",
              "Topic": "terraform",
              "for-use-with-amazon-emr-managed-policies": "true",
              "terraform-aws-modules": "emr"
            },
            "timeouts": null,
            "vpc_id": "vpc-009f79b9a7fa135ec"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.emr.data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.emr.module.cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-2069619045",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07b981b8d8d330587",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.emr.data.aws_vpc.default",
            "module.emr.module.cluster.aws_security_group.master"
          ]
        }
      ]
    },
    {
      "module": "module.emr.module.cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "slave",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-2390034156",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02f6d8c30b3bbe282",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.emr.data.aws_vpc.default",
            "module.emr.module.cluster.aws_security_group.master",
            "module.emr.module.cluster.aws_security_group.slave"
          ]
        }
      ]
    }
  ]
}